updated css for color and alignment

--- a/tutorbot/static/css/custom.css
+++ b/tutorbot/static/css/custom.css
@@ -4,6 +4,14 @@
 }
 
 .chat-log {
-    max-height:200px;
+    max-height:600px;
     overflow-y:scroll;
+}
+
+.detail {
+  background-color: azure;
+}
+
+.source {
+  text-align: right;
 }
