--- a/tutorbot/static/css/custom.css
+++ b/tutorbot/static/css/custom.css
@@ -15,3 +15,17 @@
 .source {
   text-align: right;
 }
+
+body {
+  background-image: url("../img/super.gif");
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+}
+
+html {
+    height: 100%
+}
+
+.jumbotron {
+  background-color: #eceee766;
+}
