--- a/tutorbot/templates/app.html
+++ b/tutorbot/templates/app.html
@@ -2,7 +2,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Django ChatterBot Example</title>
+    <title>TutorCurieBot</title>
     <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}"/>
     <link rel="stylesheet" href="{% static 'css/custom.css' %}"/>
   </head>
@@ -13,9 +13,9 @@
     <div class="container">
 
       <div class="jumbotron mt-1">
-        <h1 class="jumbotron-heading text-xs-center">Django ChatterBot Example</h1>
+        <h1 class="jumbotron-heading text-xs-center">TutorCurieBot</h1>
         <p class="lead text-xs-center">
-          This is a web app that allows you to talk to ChatterBot.
+          This is a web app that allows you to talk to TutorCurieBot.
         </p>
 
         <hr class="my-2">
