Added some intro

--- a/tutorbot/templates/app.html
+++ b/tutorbot/templates/app.html
@@ -15,7 +15,9 @@
       <div class="jumbotron mt-1">
         <h1 class="jumbotron-heading text-xs-center">TutorCurieBot</h1>
         <p class="lead text-xs-center">
-          This is a web app that allows you to talk to TutorCurieBot.
+          This is a web app that allows you to talk to TutorCurieBot.</br>
+          Ask her any type of question 🤔 from about her, jokes to ruby, ruby-on-rails,react and javascript.</br>
+          Say hello to TutorCurie in English, Spanish, Chinese and Bangla.😁
         </p>
 
         <hr class="my-2">
